--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,13 +1,7 @@
 .container {
-  padding: 0 2rem;
 }
 
 .main {
   min-height: 50vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: #fafafa;
 }
