--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,7 @@
 .main {
+  margin-top: 60px;
   min-height: 50vh;
+  min-width: 100vw;
   background-color: #fafafa;
   padding-top: 20px;
   padding-left: 400px;
@@ -7,8 +9,5 @@
 }
 .container{
   display: flex;
-
-}
-.container > div{
-    flex-basis: 100%;
+  justify-content: center;
 }
