--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,6 +1,12 @@
 @media screen and (min-width: 0px) {
    .navbar{
     border-bottom: 1px solid rgb(231, 231, 231);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 1;
    }
    .flexLogo{
     flex: 0 0 327px;
