Messages module 50%, designs points remains

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -11,6 +11,10 @@
    .flexLogo{
     flex: 0 0 327px;
    }
+   .flexLogo img{
+    cursor: pointer;
+   }
+
    .flexSearch{
     flex: 0 0 327px;
    }
