--- a/styles/MessagesList.module.css
+++ b/styles/MessagesList.module.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 0px) {
       .container{
         width: 300px;
+        min-height: 100%;
         display: flex;
         background-color: white;
         flex-direction: column;
@@ -11,6 +12,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
       }
       .header{
         padding: 20px 0 20px 0;
