--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,11 @@
 .main {
   min-height: 50vh;
-  min-width: 100vw;
+  width: 100vw;
   background-color: #fafafa;
   padding-top: 20px;
   padding-left: 400px;
   padding-right: 400px;
+  max-width: 100%;
 }
 .container{
   display: flex;
