--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -15,6 +15,9 @@
         font-size: 11px;
         display: flex;
         flex-direction: column;
+        padding:20px;
+        justify-content: flex-end;
+        
     }
     .centerContent{
         display: flex;
@@ -22,6 +25,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
+        
     }
 
     .header{
@@ -38,6 +42,53 @@
         font-weight: lighter;
     }
    
+    .dateChat{
+        text-align: center;
+        font-size: 12px;
+        color: grey;
+    }
+    .messageContainer{
+        margin-top: 30px;
+    }
+    .messageChat{
+        max-width: 200px;
+        border: 1px solid rgb(228, 228, 228);
+        padding: 10px 14px 10px 14px;
+        border-radius: 20px;
+    }
+    .messageMe{
+        float: right;
+        background-color: rgb(228, 228, 228);
+        text-align: right;
+    }
+    .messageFriend{
+        text-align: left;
+    }
+
+    .inputContainer{
+        margin-top: 20px;
+        display: flex;
+        justify-content: center;
+        border: 1px solid rgb(228, 228, 228);
+        border-radius: 20px;
+        align-items: center;
+        padding: 0 15px 0 15px;
+
+    }
+    .input{
+        font-size: 11px;
+        width: 100%;
+        outline: 0;
+        border: 0;
+        margin: 10px 15px 10px 15px;
+    }
+    .iconInput{
+        display: flex;
+    }
+    .iconInput div{
+        cursor: pointer;
+        padding-left: 10px;
+    }
  } 
  
  @media screen and (min-width: 620px) {
