--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -9,6 +9,14 @@
         height: 30px;
         outline: none;
     }
+    .container{
+        display: flex;
+        align-items: center;
+    }
+    .icon{
+       cursor: pointer;
+       margin-left: -24px;
+    }
  } 
  
  @media screen and (min-width: 620px) {
