Stories scroll side implemented

--- a/styles/PostItem.module.css
+++ b/styles/PostItem.module.css
@@ -8,7 +8,7 @@
         font-size: 11px;
    }
     .nameUser{
-        padding-left: 5px;
+        padding-left: 8px;
         font-weight: 500;
    }
     .header{
@@ -16,9 +16,6 @@
         justify-content: space-between;
         align-items: center;
         padding: 8px;
-   }
-    .footer{
-        padding: 10px;
    }
     .icon{
         cursor: pointer;
@@ -32,8 +29,41 @@
    }
     .buttonGroupLeft>div{
         cursor: pointer;
-        padding-left: 10px;
+        padding-right: 10px;
    }
+    .bottom{
+        padding: 20px 20px 15px 20px;
+    }
+   .inputGroup{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .input{
+        font-size: 11px;
+        width: 100%;
+        outline: 0;
+        border: 0;
+        padding: 10px;
+    }
+ 
+    .link{
+        font-size: 12px;
+        color: #0095f6;
+        font-weight: 500;
+    }
+
+    .imageViewed{
+        outline: 1.5px solid;
+        outline-color: rgb(182, 181, 181);
+        outline-offset: 2px;
+   }
+    .imageNotViewed{
+        outline: 2px solid;
+        outline-color: rgb(228, 144, 0);
+        outline-offset: 2px;
+   }
+   
 }
 @media screen and (min-width: 620px) {
 }
