--- a/styles/FollowSuggest.module.css
+++ b/styles/FollowSuggest.module.css
@@ -12,11 +12,14 @@
         justify-content: space-around;
         align-items: center;
    }
+   .nickname{
+       color: #8e8e8e;
+       font-weight: 400;
+   }
     .info{
         display: block;
+        color: #262626;
         max-width: 150px;
-        text-overflow: "ellipsis";
-        overflow: hidden;
         white-space: nowrap;
         flex: 0 0 300px 
    }
@@ -29,15 +32,18 @@
         padding: 0 20px 0 20px;
    }
     .subtitleSuggest{
-        font-size: 14px;
+        font-size: 11px;
         font-weight: 600;
-        color: rgb(157, 156, 156);
+        color: #8e8e8e;
    }
     .aboutSection{
         padding: 20px;
    }
     .aboutLinks{
         color: rgb(172, 172, 172);
+   }
+   .followFriends{
+    color: #8e8e8e;
    }
 }
 @media screen and (min-width: 620px) {
