--- a/styles/AccountConfig/ProfileEdit.module.css
+++ b/styles/AccountConfig/ProfileEdit.module.css
@@ -1,36 +1,4 @@
 @media screen and (min-width: 0px) {
-    .wrapper{
-        background-color: #fafafa;
-    }
-    .container{
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     background-color: white;
-     padding: 25px;
-   }
-   .sidebar{
-       width: 220px;
-       border: 1px solid rgb(231, 231, 231);
-   }
-   .sidebar li{
-       list-style-type: none;
-       font-size: 12px;
-       color: #262626;
-       padding: 16px 26px 16px 26px;
-       cursor: pointer;
-   }
-   .sidebar li:hover{
-    background-color: rgb(250, 250, 250);
-}
-   .itemSelected{
-       font-weight: 600;
-       border-left: 1px solid black;
-   }
-   .liHighlight{
-       color: #0095f6 !important;;
-       font-weight: 700;
-   }
    .content{
         width: 580px;
         border: 1px solid rgb(231, 231, 231);
@@ -94,6 +62,9 @@
         padding: 6px;
         font-size: 11px;
    }
+   .submit:disabled{
+    opacity: 0.4;
+}
 }
 @media screen and (min-width: 620px) {
 }
