--- a/styles/AccountConfig.module.css
+++ b/styles/AccountConfig.module.css
@@ -1,88 +1,106 @@
 @media screen and (min-width: 0px) {
-    .wrapper{
+    .wrapper {
         background-color: #fafafa;
     }
-    .container{
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     background-color: white;
-     padding: 25px;
-   }
-   .sidebar{
-       width: 220px;
-       border: 1px solid rgb(231, 231, 231);
-   }
-   .sidebar li{
-       list-style-type: none;
-       font-size: 12px;
-       color: #262626;
-       padding: 16px 26px 16px 26px;
-       cursor: pointer;
-   }
-   .sidebar li:hover{
-    background-color: rgb(250, 250, 250);
-}
-   .itemSelected{
-       font-weight: 600;
-       border-left: 1px solid black;
-   }
-   .liHighlight{
-       color: #0095f6 !important;;
-       font-weight: 700;
-   }
-   .content{
+
+    .container {
+        display: flex;
+        flex-direction: row;
+        justify-content: inherit;
+        background-color: white;
+        padding: 25px;
+    }
+
+    .sidebar {
+        display: none;
+    }
+
+    .sidebar li {
+        list-style-type: none;
+        font-size: 12px;
+        color: #262626;
+        padding: 16px 26px 16px 26px;
+        cursor: pointer;
+    }
+
+    .sidebar li:hover {
+        background-color: rgb(250, 250, 250);
+    }
+
+    .itemSelected {
+        font-weight: 600;
+        border-left: 1px solid black;
+    }
+
+    .liHighlight {
+        color: #0095f6 !important;
+        ;
+        font-weight: 700;
+    }
+
+    .content {
         width: 580px;
         border: 1px solid rgb(231, 231, 231);
         padding: 18px 32px 0 32px;
-   }
-   .flexbox{
-       display: flex;
-       flex-direction: row;
-       align-items: center;
-       justify-content: center;
-   }
-   .blueText{
-    color: #0095f6 !important;;
-    font-weight: 600;
-    font-size: 11px;
-    cursor: pointer;
-   }
-   .form{
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-   }
-   .flexInput{
-       padding-bottom: 18px;
+    }
+
+    .flexbox {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .blueText {
+        color: #0095f6 !important;
+        ;
+        font-weight: 600;
+        font-size: 11px;
+        cursor: pointer;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flexInput {
+        padding-bottom: 18px;
         width: 500px;
         display: flex;
         justify-content: center;
-   }
-   .flexInput input, .flexInput textarea{
-       width: 100%;
-       border: 1px solid rgb(231, 231, 231);
-       color: rgb(121, 121, 121);
-       padding: 6px 10px 6px 10px;
-       border-radius: 4px;
-       font-size: 12px;
-    
-}
-   .flexInput div:nth-child(1){
-       width: 140px;
-       font-size: 13px;
-       font-weight: 500;
-       text-align: right;
-       padding-right: 20px;
-   }
-   .flexInput div:nth-child(2){
+    }
+
+    .flexInput input,
+    .flexInput textarea {
+        width: 100%;
+        border: 1px solid rgb(231, 231, 231);
+        color: rgb(121, 121, 121);
+        padding: 6px 10px 6px 10px;
+        border-radius: 4px;
+        font-size: 12px;
+
+    }
+
+    .flexInput div:nth-child(1) {
+        width: 140px;
+        font-size: 13px;
+        font-weight: 500;
+        text-align: right;
+        padding-right: 20px;
+    }
+
+    .flexInput div:nth-child(2) {
         width: 260px;
     }
-    .smallText{
+
+    .smallText {
         font-size: 10px;
         color: #8e8e8e;
     }
-    .submit{
+
+    .submit {
         text-align: center;
         cursor: pointer;
         background-color: #0095f6;
@@ -93,11 +111,25 @@
         border-radius: 4px;
         padding: 6px;
         font-size: 11px;
-   }
+    }
 }
-@media screen and (min-width: 620px) {
+
+@media screen and (min-width: 720px) {
+    .sidebar {
+        display: block;
+        width: 220px;
+        border: 1px solid rgb(231, 231, 231);
+    }
+    .container {
+        /* display: flex; */
+        /* flex-direction: row; */
+        justify-content: center;
+        /* background-color: white; */
+        /* padding: 25px; */
+    }
+
 }
-@media screen and (min-width: 960px) {
-}
-@media screen and (min-width: 1200px) {
-}
+
+@media screen and (min-width: 960px) {}
+
+@media screen and (min-width: 1200px) {}
