--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -1,6 +1,5 @@
 @media screen and (min-width: 0px) {
     .container{
-        width: 600px;
         background-color: white;
         border: 1px solid rgb(214, 214, 214);
         font-size: 11px;
@@ -8,7 +7,6 @@
         flex-direction: column;
    }
     .containerChat{
-        width: 600px;
         min-height: 70vh;
         background-color: white;
         border: 1px solid rgb(214, 214, 214);
@@ -43,21 +41,22 @@
         color: grey;
    }
     .messageContainer{
-        margin-top: 30px;
+        padding-top: 30px;
    }
     .messageChat{
-        max-width: 200px;
         border: 1px solid rgb(228, 228, 228);
         padding: 10px 14px 10px 14px;
         border-radius: 20px;
    }
     .messageMe{
+        max-width: 50%;
+        border: 1px solid rgb(228, 228, 228);
         float: right;
         background-color: rgb(228, 228, 228);
-        text-align: right;
    }
     .messageFriend{
-        text-align: left;
+        max-width: 50%;
+        display: inline-block;
    }
     .inputContainer{
         margin-top: 20px;
