--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -1,91 +1,122 @@
 @media screen and (min-width: 0px) {
-    .card{
+    .card {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         margin-top: 30px;
         justify-content: center;
         font-size: 12px;
-   }
-    .nameUser{
+    }
+
+    .nameUser {
         font-size: 12px;
         font-weight: 500;
-   }
-    .header{
+    }
+
+    .header {
         display: flex;
         justify-content: center;
         align-items: center;
         padding-bottom: 8px;
-   }
-   .header > div:nth-child(2){
-       padding-left: 14px;
+    }
+
+    .header>div:nth-child(2) {
+        padding-left: 14px;
         flex: 1;
-   }
-   .descriptionContainer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 8px;
-}
-    .description{
+    }
+
+    .descriptionContainer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 8px;
+    }
+
+    .description {
         font-weight: lighter;
         padding-left: 14px;
     }
-    .icon{
+
+    .icon {
         cursor: pointer;
-   }
-    .buttonGroup{
+    }
+
+    .buttonGroup {
         display: flex;
         justify-content: space-between;
-   }
-    .buttonGroupLeft{
+    }
+
+    .buttonGroupLeft {
         display: flex;
-   }
-    .buttonGroupLeft>div{
+    }
+
+    .buttonGroupLeft>div {
         cursor: pointer;
         padding-right: 10px;
-   }
-    .bottom{
+    }
+
+    .bottom {
         padding: 20px 20px 15px 20px;
         background-color: white;
         border: 1px solid rgb(214, 214, 214);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 300px;
+        width: 100%;
     }
-   .inputGroup{
+
+    .inputGroup {
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    .input{
+
+    .input {
         font-size: 11px;
         width: 100%;
         outline: 0;
         border: 0;
         padding: 10px;
     }
- 
-    .link{
+
+    .link {
         color: #0095f6;
         font-weight: 600;
     }
 
-    .imageViewed{
+    .imageViewed {
         outline: 1.5px solid;
         outline-color: rgb(182, 181, 181);
         outline-offset: 2px;
-   }
-    .imageNotViewed{
+    }
+
+    .imageNotViewed {
         outline: 2px solid;
         outline-color: rgb(228, 144, 0);
         outline-offset: 2px;
-   }
-  }
-  @media screen and (min-width: 620px) {
-  }
-  @media screen and (min-width: 960px) {
-  }
-  @media screen and (min-width: 1200px) {
-  }
-  
+    }
+    
+    .postImage{
+        position: relative; 
+        aspect-ratio : 1 / 1;
+        width:100%;
+    }
+}
+
+@media screen and (min-width: 580px) {
+    .card {
+        flex-direction: row;
+    }
+    .bottom {
+        width: 300px;
+    }
+    .postImage{
+        position: relative; 
+        max-width: 500px;
+        aspect-ratio : 1 / 1;
+        width:50%;
+    }
+}
+
+@media screen and (min-width: 960px) {}
+
+@media screen and (min-width: 1200px) {}
