--- a/styles/PostItem.module.css
+++ b/styles/PostItem.module.css
@@ -63,6 +63,12 @@
         outline-color: rgb(228, 144, 0);
         outline-offset: 2px;
    }
+
+   .postImage{
+    position: relative; 
+    aspect-ratio : 1 / 1;
+    width:100%;
+}
    
 }
 @media screen and (min-width: 620px) {
