--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -1,35 +1,47 @@
 @media screen and (min-width: 0px) {
     .main {
         background-color: #fafafa;
-        padding-top: 20px;
+        padding: 20px;
         display: flex;
-        align-items: center;
         flex-direction: column;
-   }
-    .header{
-        max-width: 600px;
-        display: flex;
-        flex-direction: row;
+        /* flex-wrap: wrap; */
         align-items: center;
-   }
-    .content{
-        padding-left: 60px;
-   }
-    .titleFlex{
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content {
+        /* padding-left: 60px; */
+    }
+
+    .titleFlex {
         display: flex;
         align-items: center;
-   }
-    .titleFlex div{
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .titleFlex div {
         padding-left: 16px;
-   }
-    .subtitleFlex{
+    }
+
+    .subtitleFlex {
         display: flex;
+        flex-direction: column;
         align-items: center;
-   }
-    .subtitleFlex small{
+        justify-content: center;
+    }
+
+    .subtitleFlex small {
         padding-right: 24px;
-   }
-    .button{
+    }
+
+    .button {
         cursor: pointer;
         border: 1px solid rgb(211, 211, 211);
         padding: 5px;
@@ -38,8 +50,9 @@
         font-size: 11px;
         background-color: transparent;
         color: rgb(46, 46, 46);
-   }
-    .button:active{
+    }
+
+    .button:active {
         cursor: pointer;
         background-color: rgb(114, 114, 114);
         border: 1px solid rgb(211, 211, 211);
@@ -47,14 +60,37 @@
         border-radius: 4px;
         font-size: 11px;
         color: rgb(255, 255, 255);
-   }
-    .status{
+    }
+
+    .status {
         padding-top: 10px;
-   }
+    }
 }
+
 @media screen and (min-width: 620px) {
+
+    .header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .subtitleFlex {
+        flex-direction: row;
+        justify-content: inherit;
+    }
+
+    .titleFlex {
+        flex-direction: row;
+        justify-content: inherit;
+
+    }
+
+    .content {
+        padding-left: 60px;
+    }
 }
-@media screen and (min-width: 960px) {
-}
-@media screen and (min-width: 1200px) {
-}
+
+@media screen and (min-width: 960px) {}
+
+@media screen and (min-width: 1200px) {}
