--- a/styles/Upload.module.css
+++ b/styles/Upload.module.css
@@ -1,12 +1,13 @@
 @media screen and (min-width: 0px) {
     .container{
         display: flex;
+        min-width: 0;
         padding: 10px;
         flex-direction: column;
         align-items: center;
+        /* width: 400px; */
    }
     .header{
-        width: 400px;
         text-align: center;
    }
     .title{
