Medinagram responsive ready

--- a/styles/Explore.module.css
+++ b/styles/Explore.module.css
@@ -1,46 +1,40 @@
 @media screen and (min-width: 0px) {
-  .main {
-      min-height: 50vh;
-      max-width: 100%;
-      background-color: #fafafa;
-      padding-top: 20px;
-      /* padding-left: 400px; */
-      /* padding-right: 400px; */
- }
-  .container{
-      display: grid;
-      grid-template-columns: auto;
-      grid-auto-rows: 240px;
-      align-content: space-around;
-      /* justify-content: center; */
-      flex-wrap: wrap;
- }
-  .container div{
-      margin: 4px;
-      display: grid;
-      flex-wrap: wrap;
-
-      /* justify-content: center; */
- }
-  .container div:hover{
-      cursor: pointer;
-      opacity: 0.9;
- }
-  .itemTwoColumsRows{
-      grid-area: auto/auto/ span 2/span 2 ;
-      aspect-ratio : 1 / 1;
- }
-}
-@media screen and (min-width: 660px) {
-    .container{
-        display: grid;
-        grid-template-columns: 240px 240px 240px;
-        grid-auto-rows: 240px;
-        align-content: space-around;
+    .main {
+        min-height: 50vh;
+        max-width: 100%;
+        background-color: #fafafa;
+        padding-top: 20px;
+        display: flex;
         justify-content: center;
-   }
+    }
+
+    .container {
+        display: grid;
+        max-width: 800px;
+        grid-template-columns: auto auto auto;
+        align-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .container div {
+        margin: 4px;
+        display: grid;
+        flex-wrap: wrap;
+    }
+
+    .container div:hover {
+        cursor: pointer;
+        opacity: 0.9;
+    }
+
+    .itemTwoColumsRows {
+        grid-area: auto/auto/ span 2/span 2;
+        aspect-ratio: 1 / 1;
+    }
 }
-@media screen and (min-width: 960px) {
-}
-@media screen and (min-width: 1200px) {
-}
+
+@media screen and (min-width: 660px) {}
+
+@media screen and (min-width: 960px) {}
+
+@media screen and (min-width: 1200px) {}
