--- a/styles/AccountConfig/ProfileEdit.module.css
+++ b/styles/AccountConfig/ProfileEdit.module.css
@@ -1,56 +1,66 @@
 @media screen and (min-width: 0px) {
-   .content{
-        width: 580px;
+    .content {
         border: 1px solid rgb(231, 231, 231);
         padding: 18px 32px 0 32px;
-   }
-   .flexbox{
-       display: flex;
-       flex-direction: row;
-       align-items: center;
-       justify-content: center;
-   }
-   .blueText{
-    color: #0095f6 !important;;
-    font-weight: 600;
-    font-size: 11px;
-    cursor: pointer;
-   }
-   .form{
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-   }
-   .flexInput{
-       padding-bottom: 18px;
-        width: 500px;
+    }
+
+    .flexbox {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .blueText {
+        color: #0095f6 !important;
+        font-weight: 600;
+        font-size: 11px;
+        cursor: pointer;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flexInput {
+        padding-bottom: 18px;
+        max-width: 500px;
+        width: 100%;
         display: flex;
         justify-content: center;
-   }
-   .flexInput input, .flexInput textarea{
-       width: 100%;
-       border: 1px solid rgb(231, 231, 231);
-       color: rgb(121, 121, 121);
-       padding: 6px 10px 6px 10px;
-       border-radius: 4px;
-       font-size: 12px;
-    
-}
-   .flexInput div:nth-child(1){
-       width: 140px;
-       font-size: 13px;
-       font-weight: 500;
-       text-align: right;
-       padding-right: 20px;
-   }
-   .flexInput div:nth-child(2){
+    }
+
+    .flexInput input,
+    .flexInput textarea {
+        width: 100%;
+        border: 1px solid rgb(231, 231, 231);
+        color: rgb(121, 121, 121);
+        padding: 6px 10px 6px 10px;
+        border-radius: 4px;
+        font-size: 12px;
+
+    }
+
+    .flexInput div:nth-child(1) {
+        width: 140px;
+        font-size: 13px;
+        font-weight: 500;
+        text-align: right;
+        padding-right: 20px;
+    }
+
+    .flexInput div:nth-child(2) {
         width: 260px;
     }
-    .smallText{
+
+    .smallText {
         font-size: 10px;
         color: #8e8e8e;
     }
-    .submit{
+
+    .submit {
         text-align: center;
         cursor: pointer;
         background-color: #0095f6;
@@ -61,14 +71,15 @@
         border-radius: 4px;
         padding: 6px;
         font-size: 11px;
-   }
-   .submit:disabled{
-    opacity: 0.4;
+    }
+
+    .submit:disabled {
+        opacity: 0.4;
+    }
 }
-}
-@media screen and (min-width: 620px) {
-}
-@media screen and (min-width: 960px) {
-}
-@media screen and (min-width: 1200px) {
-}
+
+@media screen and (min-width: 620px) {}
+
+@media screen and (min-width: 960px) {}
+
+@media screen and (min-width: 1200px) {}
